Meta cleanup, font fix

--- a/other.html
+++ b/other.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="Theo Menard" content="width=device-width, initial-scale=1.0">
-    <title>Theo Menard</title>
+    <meta description="Game developper and artist based in Montreal.">
+    <title>Theo Menard - Other</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav>
@@ -49,7 +48,6 @@
 
       <br><br><br>
     </main>
-	<script src="index.js"></script>
   </body>
 </html>
 
