--- a/tweetcart.html
+++ b/tweetcart.html
@@ -2,11 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="Theo Menard" content="width=device-width, initial-scale=1.0">
-    <title>Theo Menard</title>
+    <meta name="Theo Menard - Tweetcarts" content="width=device-width, initial-scale=1.0">
+    <meta description="Game developper and artist based in Montreal.">
+    <title>Theo Menard - Tweetcarts</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav>
@@ -62,7 +61,6 @@
         </tr>
       </table>
     </main>
-	<script src="index.js"></script>
   </body>
 </html>
 
