--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="Theo Menard" content="width=device-width, initial-scale=1.0">
+    <meta description="Game developper and artist based in Montreal.">
     <title>Theo Menard</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <nav>
@@ -29,6 +28,5 @@
         <a href="https://theom.itch.io/">Itch.io</a>
         </p>
     </main>
-	<script src="index.js"></script>
   </body>
 </html>
