--- a/cv.html
+++ b/cv.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <nav>
-      <a id="nav" href="./index.html"><h1>Theo Menard;</h1></a>
+      <a id="nav" href="./"><h1>Theo Menard;</h1></a>
       <a id="nav" href="./cv.html"><b id="active-section">CV</b></a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
