--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <hr>
     <main><h3>Howdy!</h3>
-        <h4>My name is Theo, I am a game developper and artist based in Montreal, Canada.</h4>
+        <h4>My name is Theo, I am a game developer and artist based in Montreal, Canada.</h4>
         <p>I am passionate about games, the wide spectrum of what they are able to express, and the people that make them. I believe in care, community, and non-violent communication. As such, I hold accessibility for disabled and beginner gamers as a core value, and I am interested in non-violent games.
 
         <b>I am currently open for work.</b> I am looking for technical design, design, or gameplay programming positions in the video game industry. With a versatile background, I can easily adapt to the needs of a production team; years of experience as a programmer means I am comfortable with complex systems, while occupying leading roles and being a professional game master means I can keep them digestible. See my CV above for more information.
