--- a/cv.html
+++ b/cv.html
@@ -10,6 +10,7 @@
   <body>
     <nav>
       <a id="nav" href="./"><h1>Theo Menard;</h1></a>
+      <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html"><b id="active-section">CV</b></a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
@@ -17,7 +18,7 @@
     </nav>
     <hr>
     <main>
-      <h2>General info</h2>
+      <h2>🙋‍♂️ General info</h2>
     
       <ul>
       <li><b>Pronouns:</b> he/they</li>
@@ -30,7 +31,7 @@
       
       <br>
 
-      <h2>Professional experience</h2>
+      <h2>👩‍🔧 Professional experience</h2>
 
       <h3>Game designer </h3>
       <h4>A Little Smarter</h4>
@@ -69,7 +70,7 @@
 
       <br>
 
-      <h2>Education</h2>
+      <h2>👩‍🎓 Education</h2>
 
       <h3>DESS, Game design</h3>
       <h4>Université de Montréal</h4>
@@ -85,15 +86,19 @@
 
       <br>
 
-      <h2>Other experience</h2>
+      <h2>🧙‍♂️ Other experience</h2>
 
       <h3>Board member</h3>
       <h4>Flop</h4>
       <h5>Aug 2018 - Mar 2020</h5>
       <p>Experimental game developers collective. Organization for several public events, host of monthly meetups.</p>
-
-      <br><br><br>
-
     </main>
+    <hr>
+    <div id="footer">
+      <a href ="https://www.linkedin.com/in/theomenard/"><img src="./images/logos/linkedin.png" width="40px"></a>&ensp;
+      <a href ="https://theom.itch.io/"><img src="./images/logos/itch.png" width="40px"></a>&ensp;
+      <a href ="https://twitter.com/Theoremnd"><img src="./images/logos/twitter.png" width="40px"></a>
+    </div>
+    <br><br><br>
   </body>
 </html>
