--- a/index.html
+++ b/index.html
@@ -10,23 +10,28 @@
   <body>
     <nav>
       <a id="nav" href="./"><h1>Theo Menard;</h1></a>
+      <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
       <a id="nav" href="./other.html">Other works</a>
     </nav>
     <hr>
-    <main><h3>Howdy!</h3>
-        <h4>My name is Theo, I am a game developer and artist based in Montreal, Canada.</h4>
-        <p>I am passionate about games, the wide spectrum of what they are able to express, and the people that make them. I believe in care, community, and non-violent communication. As such, I hold accessibility for disabled and beginner gamers as a core value, and I am interested in non-violent games.
+    <main><h2>✨ Howdy!</h2>
+        <p>My name is Theo, I am a game developer and artist based in Montreal, Canada. I am passionate about games, the wide spectrum of what they are able to express, and the people that make them. </p>
+        <p>I am fascinated about the creative potential of games, both in terms of mechanics and storytelling. I am always on the lookout for innovative ideas that push the industry forward. </p>
+        <p>I also believe in care, community, and non-violent communication. As such, I hold accessibility for disabled and beginner gamers as a core value, and I am interested in non-violent games.
 
-        <b>I am currently open for work.</b> I am looking for technical design, design, or gameplay programming positions in the video game industry. With a versatile background, I can easily adapt to the needs of a production team; years of experience as a programmer means I am comfortable with complex systems, while occupying leading roles and being a professional game master means I can keep them digestible. See my CV above for more information.
+        <h2>📝 I am currently open for work.</h2>
+        <p>I am looking for a position as technical designer, designer, or gameplay programmer in the video game industry in Montreal. With a versatile background, I can easily adapt to the needs of a production team; years of experience as a programmer means I am comfortable with complex systems, while occupying leading roles and being a professional game master means I can keep them digestible. See my CV above for more information.</p>
       </p>
-
-        <p><a href="https://www.linkedin.com/in/theomenard/">LinkedIn</a>
-        <a href="https://twitter.com/Theoremnd">Twitter</a>
-        <a href="https://theom.itch.io/">Itch.io</a>
-        </p>
     </main>
+    <hr>
+    <div id="footer">
+      <a href ="https://www.linkedin.com/in/theomenard/"><img src="./images/logos/linkedin.png" width="40px"></a>&ensp;
+      <a href ="https://theom.itch.io/"><img src="./images/logos/itch.png" width="40px"></a>&ensp;
+      <a href ="https://twitter.com/Theoremnd"><img src="./images/logos/twitter.png" width="40px"></a>
+    </div>
+    <br><br><br>
   </body>
 </html>
