--- a/other.html
+++ b/other.html
@@ -10,6 +10,7 @@
   <body>
     <nav>
       <a id="nav" href="./"><h1>Theo Menard;</h1></a>
+      <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
@@ -17,7 +18,7 @@
     </nav>
     <hr>
     <main>
-      <h2>Social games</h2>
+      <h2>🎭 Social games</h2>
       <p>Through my passion for both gaming and social events, I have a particular interest in crafting experiences that help people connect with each other, while still providing the unique wonders brought by the act of playing (ie not resorting to system-less approaches like asking premade questions to participants). I found success using elements such as fragmented knowledge, information hidden in plain sight, and treasure hunts.</p>
 
       <table><tr>
@@ -39,15 +40,22 @@
 
       <br>
 
-      <h2>Music</h2>
+      <h2>🎺 Music</h2>
+      I am also a music producer under the name Theorem One. You can find my work on <a href="https://soundcloud.com/theoremone">Soundcloud</a>.
+      <br><br>
       <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1537809982&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/theoremone" title="Theorem One" target="_blank" style="color: #cccccc; text-decoration: none;">Theorem One</a> · <a href="https://soundcloud.com/theoremone/the-quagmire-hut" title="The Quagmire Hut" target="_blank" style="color: #cccccc; text-decoration: none;">The Quagmire Hut</a></div>
 
       <br>
 
       <iframe width="100%" height="150" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/797318242&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/theoremone" title="Theorem One" target="_blank" style="color: #cccccc; text-decoration: none;">Theorem One</a> · <a href="https://soundcloud.com/theoremone/iki" title="Iki" target="_blank" style="color: #cccccc; text-decoration: none;">Iki</a></div>
-
-      <br><br><br>
     </main>
+    <hr>
+    <div id="footer">
+      <a href ="https://www.linkedin.com/in/theomenard/"><img src="./images/logos/linkedin.png" width="40px"></a>&ensp;
+      <a href ="https://theom.itch.io/"><img src="./images/logos/itch.png" width="40px"></a>&ensp;
+      <a href ="https://twitter.com/Theoremnd"><img src="./images/logos/twitter.png" width="40px"></a>
+    </div>
+    <br><br><br>
   </body>
 </html>
 
