--- a/videogames.html
+++ b/videogames.html
@@ -10,6 +10,7 @@
   <body>
     <nav>
       <a id="nav" href="./"><h1>Theo Menard;</h1></a>
+      <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html"><b id="active-section">Video games</b></a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
@@ -81,6 +82,13 @@
             </td>
           </tr></table>
     </main>
+    <hr>
+    <div id="footer">
+      <a href ="https://www.linkedin.com/in/theomenard/"><img src="./images/logos/linkedin.png" width="40px"></a>&ensp;
+      <a href ="https://theom.itch.io/"><img src="./images/logos/itch.png" width="40px"></a>&ensp;
+      <a href ="https://twitter.com/Theoremnd"><img src="./images/logos/twitter.png" width="40px"></a>
+    </div>
+    <br><br><br>
   </body>
 </html>
 
