Engine tools section

--- a/other.html
+++ b/other.html
@@ -18,6 +18,24 @@
     </nav>
     <hr>
     <main>
+      <h2>🔨 Engine tools</h2>
+      <p>Proper engine tools are an essential part of making games efficiently. While developing Archipel, we faced issues that made iteration time longer than necessary. Thanks to the tools I made, we were able to significantly cut them down and make experimenting easier.</p>
+      <br>
+      <video width="700" autoplay controls loop>
+        <source src="videos/grass.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video> 
+      <p><b>Placing props:</b> Thanks to the amazing work from our artist, we had a wide variety of vegetation to place in the world. This tool made it effortless to plant a lot of them at once in a given radius.</p>
+      <br>
+      <video width="700" autoplay controls loop>
+        <source src="videos/walls.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+      </video> 
+      <p><b>Drawing walls:</b> Because of the layout of our map, the out-of-bound areas were not axis-aligned. This made using box colliders as invisible walls very clunky, and we needed a way to iterate on the world terrain. This wall-drawing tool made it easy to place, edit, and remove walls on the go.</p>
+      
+      <br>
+      <br>
+
       <h2>🎭 Social games</h2>
       <p>Through my passion for both gaming and social events, I have a particular interest in crafting experiences that help people connect with each other, while still providing the unique wonders brought by the act of playing (ie not resorting to system-less approaches like asking premade questions to participants). I found success using elements such as fragmented knowledge, information hidden in plain sight, and treasure hunts.</p>
 
