--- a/cv.html
+++ b/cv.html
@@ -13,8 +13,9 @@
       <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html"><b id="active-section">CV</b></a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
+      <a id="nav" href="./socialgames.html">Social games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
-      <a id="nav" href="./other.html">Other works</a>
+      <a id="nav" href="./other.html">Misc</a>
     </nav>
     <hr>
     <main>
@@ -33,7 +34,12 @@
 
       <h2>👩‍🔧 Professional experience</h2>
 
-      <h3>Game designer </h3>
+      <h3>Technical designer</h3>
+      <h4>Ubisoft</h4>
+      <h5>Jan 2024 - Current</h5>
+      <p>Data integration on Assassin's Creed: Codename Hexe. Reaction of the enemies and civilians to various in-game events.</p>
+
+      <h3>Game designer</h3>
       <h4>A Little Smarter</h4>
       <h5>Jul - Aug 2023</h5>
       <p>Designer on an unannounced game. Documentation setup, prototype development.</p>
@@ -45,8 +51,8 @@
         The goal was combining six digital artworks at varied production states into an exhibit inside a single virtual reality HMD. Coordination between the curator, the artists and the programming/integration team, project management tasks.</p>
 
       <h3>Game master</h3>
-      <h4>Randolph</h4>
-      <h5>Aug 2021 - Current</h5>
+      <h4>Randolph and Colonel Moutarde</h4>
+      <h5>Aug 2021 - Jan 2024</h5>
       <p>Game Master in a board games pub : game selection for the clients and rules teaching. Pedagogy, synthetization, engagement.</p>
 
       <h3>Gameplay programmer</h3>
