--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
       <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
+      <a id="nav" href="./socialgames.html">Social games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
-      <a id="nav" href="./other.html">Other works</a>
+      <a id="nav" href="./other.html">Misc</a>
     </nav>
     <hr>
     <main><h2>✨ Howdy!</h2>
@@ -22,8 +23,8 @@
         <p>I am fascinated about the creative potential of games, both in terms of mechanics and storytelling. I am always on the lookout for innovative ideas that push the industry forward. </p>
         <p>I also believe in care, community, and non-violent communication. As such, I hold accessibility for disabled and beginner gamers as a core value, and I am interested in non-violent games.
 
-        <h2>📝 I am currently open for work.</h2>
-        <p>I am looking for a position as technical designer, designer, or gameplay programmer in the video game industry in Montreal. With a versatile background, I can easily adapt to the needs of a production team; years of experience as a programmer means I am comfortable with complex systems, while occupying leading roles and being a professional game master means I can keep them digestible. See my CV above for more information.</p>
+        <!--h2>📝 I am currently open for work.</h2>
+        <p>I am looking for a position as technical designer, designer, or gameplay programmer in the video game industry in Montreal. With a versatile background, I can easily adapt to the needs of a production team; years of experience as a programmer means I am comfortable with complex systems, while occupying leading roles and being a professional game master means I can keep them digestible. See my CV above for more information.</p-->
       </p>
     </main>
     <hr>
