--- a/other.html
+++ b/other.html
@@ -13,8 +13,9 @@
       <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
+      <a id="nav" href="./socialgames.html">Social games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html">Tweetcarts</a> &ensp;+&ensp; 
-      <a id="nav" href="./other.html"><b id="active-section">Other works</b></a>
+      <a id="nav" href="./other.html"><b id="active-section">Misc</b></a>
     </nav>
     <hr>
     <main>
@@ -34,28 +35,6 @@
       <p><b>Drawing walls:</b> Because of the layout of our map, the out-of-bound areas were not axis-aligned. This made using box colliders as invisible walls very clunky, and we needed a way to iterate on the world terrain. This wall-drawing tool made it easy to place, edit, and remove walls on the go.</p>
       
       <br>
-      <br>
-
-      <h2>🎭 Social games</h2>
-      <p>Through my passion for both gaming and social events, I have a particular interest in crafting experiences that help people connect with each other, while still providing the unique wonders brought by the act of playing (ie not resorting to system-less approaches like asking premade questions to participants). I found success using elements such as fragmented knowledge, information hidden in plain sight, and treasure hunts.</p>
-
-      <table><tr>
-        <td><img src="images/bracelet.png" alt="screenshot" style="width: 350px;"></td>
-        <td>
-          <h3>The green bracelets (2023)</h3>
-          <p>Made for the 500 people festival L'Osstidburn. I randomly selected 19 participants, to whom I gave a sheet of paper (pictured on the left) and a green bracelet. Each participant had a single, different letter out of 19 letters that make up a sentence. They were instructed to find each other among festival participants and share the letters they knew, eventually leading them on a treasure hunt, and learning they have to read the third word of each sentence in the instruction text.
-          </p>
-        </td>
-      </tr></table>
-
-      <table><tr>
-        <td><img src="images/bday.jpg" alt="screenshot" style="width: 350px;"></td>
-        <td>
-          <h3>Birthday game (2022)</h3>
-          <p>Made for my birthday party where several people did not know each other. Requiring 18 participants, each were given a card containing some information (pictured on the left). They were instructed to find the person with the card number who matched the one written on their own, eventually leading them to look for words in a book at the pages corresponding to the number on their cards.</p>
-        </td>
-      </tr></table>
-
       <br>
 
       <h2>🎺 Music</h2>
