--- a/tweetcart.html
+++ b/tweetcart.html
@@ -13,8 +13,9 @@
       <a id="nav" href="./">About</a> &ensp;+&ensp; 
       <a id="nav" href="./cv.html">CV</a> &ensp;+&ensp; 
       <a id="nav" href="./videogames.html">Video games</a> &ensp;+&ensp; 
+      <a id="nav" href="./socialgames.html">Social games</a> &ensp;+&ensp; 
       <a id="nav" href="./tweetcart.html"><b id="active-section">Tweetcarts</b></a> &ensp;+&ensp; 
-      <a id="nav" href="./other.html">Other works</a>
+      <a id="nav" href="./other.html">Misc</a>
     </nav>
     <hr>
     <main>
