--- a/other.html
+++ b/other.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="Theo Menard" content="width=device-width, initial-scale=1.0">
     <meta description="Game developper and artist based in Montreal.">
-    <title>Theo Menard - Other</title>
+    <title>Theo Menard - Misc</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
